# kominer

./: .gitignore  Cargo.toml  LICENSE  README.md  default.nix  flake.nix
.github/workflows/: build-push.yml  build.yml
src/: cleanup.rs  main.rs  web.rs
src/api/: events.rs  mod.rs  session.rs  vocabulary.rs
src/dav/: mod.rs
static/: app.css  app.js
templates/: index.html
